[fix] z-index on mobile-navigation when hidden

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,8 +96,8 @@ body {
   width: 100vw;
   display: flex;
   justify-content: center;
-  z-index: 2;
-  transition: all 0.3s;
+  z-index: -1;
+  transition: all 0.4s;
   background-color: rgba(0, 0, 0, 0.5);
   &-list {
     position: absolute;
@@ -112,10 +112,12 @@ body {
     padding: 2rem 1rem;
     width: 90%;
     border-radius: 10px;
+    transition: opacity 0.5s;
   }
 }
 .mobile-navigation--active {
   opacity: 1;
+  z-index: 2;
 }
 .navigation-anchor {
   position: relative;
